[tool.poetry]
name = "data-analysis-sandbox"
version = "0.1.0"
description = ""
authors = ["Jocelyn Huang <jocelynyh4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.1"
jupyter = "^1.0.0"
ipykernel = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
